SQuirreL SQL Client Change Log
==============================

Not yet released - available from CVS or in the latest snapshot:
----------------------------------------------------------------

Enhancements:

MySQL Plugin
  Fixed object tree menu items:
   * Create database (on root node)
   * Drop database (on catalog nodes)
   * Rename (on table nodes)

SQL Scripts Plugin:
 New checkbox 'Use double quotes (") for qualifying' in global scripting preferences. 

Feature Request #2818444:  Oracle: Connecting as SYS not possible - now it is possible to add the necessary 
driver property to connect as SYS, or any other account that needs to connect as SYSDBA.

Look & Feel Plugin
 - Better support for Nimbus: No horizontal scrollbars on pop up lists (e.g. code completion) 

Oracle Plugin
 - SQL*Loader control file generation.
   Adds a new right mouse menu item to tables in the object tree: "Generate SQL*Loader control file"
   Thanks to José David Moreno Juárez for the patch (Patch ID 2776344)

About dialog now has a clickable link to our home page.
 - Thanks to Hashim Kubba for this patch (ID 2104309)


Graph Plugin:
 - Show constraint name can be selected on each constraint separately. See right mouse menu on constraint line.

Graph Plugin:
 - Allowed constraints to be created using drag and drop.
   To create such a non DB constraint using drag and drop hold
   down the control key. Then right click the constraint to configure it.  

 - Updated Korean translation available (Thanks to Youngwoo Kim)


Bug-Fixes:

2819161:  squirrel-sql.sh in plain zip had an errant apostrophe.  Tested this fix on MacOS 10 and Ubuntu 9.04.  
Thanks to Jonathan James for vetting the anonymously submitted patch.

SQL Scripts Plugin:
 Several scripting functions did not respect global scripting preferences about qualifying tables.

SQL Scripts Plugin:
 Foreign key constraints with more than one column were not scripted correctly. (Only first column was included.)  


Schema caching: